Bringing up to date

--- a/Arrays/index.html
+++ b/Arrays/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <!--<script src="AddingArrays.js"></script>-->
-<script src="FindAndAddIntegers.js"></script>
+<script src="ReverseArray.js"></script>
 </body>
 
 
