Finding the average of a statistic in an object

--- a/Arrays/index.html
+++ b/Arrays/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
-<script src="AddingArrays.js"></script>
-<!--<script src="ReverseArray.js"></script>
+<script src="MapArray.js"></script>
+<!--<script src="ReverseArray.js"></script>-->
 </body>
 
 
